test/asm/strfmt.err
ERROR: strfmt.asm(14):
    Formatting number as type 's'
ERROR: strfmt.asm(14):
    STRFMT: 1 unformatted argument(s)
error: Assembly aborted (2 errors)!
